--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -53,7 +53,7 @@
                 android:textSize="12sp" />
 
             <EditText
-                android:id="@+id/editTextEmail"
+                android:id="@+id/editTextEmailSignUp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -73,7 +73,7 @@
                 android:textSize="12sp" />
 
             <EditText
-                android:id="@+id/editTextPassword"
+                android:id="@+id/editTextPassSignup"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -83,7 +83,7 @@
                 android:textSize="12sp" />
 
             <EditText
-                android:id="@+id/editTextConfirmPassword"
+                android:id="@+id/editTextConfirmPass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -93,7 +93,7 @@
                 android:textSize="12sp" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/btnSignInWithEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
