--- a/app/src/main/res/layout/activity_detail_market_review.xml
+++ b/app/src/main/res/layout/activity_detail_market_review.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.market.DetailMarketActivity"
+    tools:context=".ui.market.DetailMarketReviewActivity"
     android:orientation="vertical">
-
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -14,16 +13,16 @@
         app:cardElevation="10dp"
         app:cardCornerRadius="5dp"
         android:layout_margin="10dp">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="10dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="10dp" >
+                android:orientation="horizontal">
+
                 <ImageView
                     android:id="@+id/imageViewMarket"
                     android:layout_width="100sp"
@@ -33,58 +32,50 @@
                     android:layout_marginRight="10dp"/>
 
                 <TextView
-                    android:id="@+id/textViewMarket"
-                    android:layout_width="match_parent"
+                    android:id="@+id/textViewMarketName"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:text="Walmart"
-                    android:textSize="24dp"
-                    android:textColor="@color/black"
+                    android:layout_weight="2"
                     android:gravity="left|center"
-                    android:layout_margin="16dp"/>
+                    android:textColor="@color/black"/>
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/textViewMarketDescription"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
-                android:textSize="12dp"
-                android:textColor="@color/black"
-                android:gravity="left|center"
-                android:layout_margin="16dp"/>
+            <RatingBar
+                android:id="@+id/rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                style="?android:attr/ratingBarStyleIndicator"
+                android:stepSize="0.5"
+                android:max="5"
+                android:numStars="5"
+                android:layout_gravity="center"
+                android:isIndicator="false"/>
 
-            <LinearLayout
+            <EditText
+                android:id="@+id/editTextComment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="8dp"
-                android:layout_marginBottom="8dp">
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Add to favorites"
-                    android:layout_marginRight="8dp"
-                    android:textSize="12sp"/>
-
-                <Button
-                    android:id="@+id/btnShowReviews"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="show reviews"
-                    android:layout_marginLeft="8dp"
-                    android:textSize="12sp"/>
-            </LinearLayout>
+                android:hint="Describe your experience"
+                android:textColor="@color/black"
+                android:textSize="12dp"/>
+            <Button
+                android:id="@+id/btnSendReview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="32dp"
+                android:text="send review"
+                />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:defaultQueryHint="Search products..."
-        app:iconifiedByDefault="false" />
-
+        android:text="Reviews"
+        android:textColor="@color/black"
+        android:textSize="24dp"
+        android:padding="10dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
