--- a/app/src/main/res/layout/layout_product.xml
+++ b/app/src/main/res/layout/layout_product.xml
@@ -13,7 +13,7 @@
         android:orientation="horizontal"
         android:padding="10dp" >
         <ImageView
-            android:id="@+id/imageViewProduct"
+            android:id="@+id/imageViewProductLayout"
             android:layout_width="100sp"
             android:layout_height="100sp"
             android:src="@drawable/cocacola"
@@ -21,7 +21,7 @@
             android:layout_marginRight="10dp"/>
 
         <TextView
-            android:id="@+id/textViewProductName"
+            android:id="@+id/textViewProductNameLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="Coca cola"
