--- a/app/src/main/res/layout/layout_wishlist_product.xml
+++ b/app/src/main/res/layout/layout_wishlist_product.xml
@@ -17,7 +17,7 @@
             android:orientation="horizontal"
             android:padding="10dp" >
             <ImageView
-                android:id="@+id/imageViewProduct"
+                android:id="@+id/imageViewProductWishlist"
                 android:layout_width="100sp"
                 android:layout_height="100sp"
                 android:src="@drawable/cocacola"
@@ -25,7 +25,7 @@
                 android:layout_marginRight="10dp"/>
 
             <TextView
-                android:id="@+id/textViewProductName"
+                android:id="@+id/textViewProductNameWishlist"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:text="Coca cola"
@@ -35,6 +35,7 @@
                 android:layout_margin="16dp"/>
         </LinearLayout>
         <Button
+            android:id="@+id/btnRemoveItemWishlist"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Remove item"
